# rag_kag_emobility

./: .env.example  .gitignore  AGENTS.md  README.md  api.json  changelog.md  docker-compose.yml  note_tmp.txt  pyproject.toml  release_notes.md
config/: default.yaml
data/eval/: queries.jsonl
docs/: AUDIT_REPORT.md  HANDOFF.md  api_http_client_tests.md  db_migrations.md  dev_journey.md  ingest.md  mcp.md  ontology.md  plan_note.md  postgres_backup.md  private_knowledge_controls.md  query_quality_eval.md
reports/: ocpp21-ed2-ontology-benchmark.md  ocpp21-ed2-rqk-golden-answers-benchmark.md  ocpp21-ed2-rqk-golden-answers-codex-only.md  ocpp21-ed2-rqk-golden-answers.md  ocpp21-ed2-rqk-quality-baseline.md  ocpp21-ed2-rqk-quality-ontology-aware-retrieval.md  ocpp21-ed2-rqk-quality-ontology-metrics-der.md  ocpp21-ed2-rqk-quality-ontology-relinked.md  ocpp21-ed2-rqk-quality-with-ontology.md
reports/golden_answers/: K-FUSION-SMART-CHARGING-IMPLEMENTATION-ANSWER.md  Q-FUSION-V2X-IMPLEMENTATION-ANSWER.md  R-FUSION-DER-IMPLEMENTATION-ANSWER.md
reports/golden_answers_codex-only/: K-FUSION-SMART-CHARGING-IMPLEMENTATION-ANSWER.md  Q-FUSION-V2X-IMPLEMENTATION-ANSWER.md  R-FUSION-DER-IMPLEMENTATION-ANSWER.md
scripts/: backup_postgres.sh
src/rag_ocpp/: __init__.py  config.py  privacy.py
tests/: __init__.py  conftest.py  test_privacy.py
tests/test_api/: test_admin_security.py  test_corpus_routes.py  test_openapi_schema.py  (+1 more)
tools/: _test_ks.py  _test_kw.py  diag_relations.py  eval_kw_only.py  fix_relationships.py  reembed.py  repop_eval.py  retrieval_diag.py
(+82 files in other folders)
