[project]
name = "rag-kag-ocpp"
version = "0.1.0"
description = "RAG/KAG pipeline for OCPP 2.1 enterprise knowledge — chunking, embedding, vector+graph retrieval, generation"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ming-dev" }]

dependencies = [
  # Chunking
  "chonkie>=1.6.7",
  # Database
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  # API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  # Validation
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  # PDF parsing
  "pymupdf>=1.25.0",
  "pdfplumber>=0.11.0",
  # Embedding / reranking
  "sentence-transformers>=3.4.0",
  "torch>=2.5.0",
  "transformers>=4.48.0",
  # CLI
  "typer>=0.15.0",
  "rich>=13.0.0",
  # Templates
  "jinja2>=3.1.0",
  # HTTP client (DeepSeek API)
  "httpx>=0.28.0",
  "sse-starlette>=2.0.0",
  # Config
  "omegaconf>=2.3.0",
  # Utilities
  "tqdm>=4.67.0",
  "numpy>=2.0.0",
  # MCP server
  "mcp>=1.0.0",
  # Dotenv
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
  "testcontainers[postgres]>=4.10.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
rag = "rag_ocpp.cli.main:app"
rag-mcp = "rag_ocpp.mcp.server:main_cli"
